syntax = "proto2";
option java_package = "org.webswing.model.common.proto";
package commonProto; // javascript namespace

/* =================== COMMON ====================*/

message ParamMsgInProto {
	optional string name = 1;
	optional string value = 2;
}

enum RecordingStatusEnumProto {
    NOT_RECORDING = 1;
    WAITING_FOR_RECORDING_APPROVAL = 2;
    DENIED_RECORDING_BY_USER = 3;
    RECORDING = 4;
}

enum MirroringStatusEnumProto {
    NOT_MIRRORING = 1;
    WAITING_FOR_MIRRORING_APPROVAL = 2;
    DENIED_MIRRORING_BY_USER = 3;
    MIRRORING = 4;
}

message SimpleEventMsgInProto {
    optional SimpleEventTypeProto type = 1;

    enum SimpleEventTypeProto {
        unload = 0;
        killSwing = 1;
        killSwingAdmin = 2;
        paintAck = 3;
        repaint = 4;
        downloadFile = 5;
        deleteFile = 6;
        cancelFileSelection = 7;
        requestComponentTree = 8;
        requestWindowSwitchList = 9;
        enableStatisticsLogging = 10;
        disableStatisticsLogging = 11;
        startRecording = 12;
        stopRecording = 13;
        startMirroring = 14;
        stopMirroring = 15;
    }
}

message ConnectionHandshakeMsgInProto {
    optional string instanceId = 1;
    optional string viewId = 2;
    optional string browserId = 3;
    optional uint32 desktopWidth = 4;
    optional uint32 desktopHeight = 5;
    optional string applicationName = 6;
    optional bool mirrored = 7;
    optional bool directDrawSupported = 8;
    optional string documentBase = 9;
    repeated ParamMsgInProto params = 10;
    optional string locale = 11;
    optional string url = 12;
    optional string timeZone = 13;
    optional bool dockingSupported = 14;
    optional bool touchMode = 15;
    optional bool accessiblityEnabled = 16;
    optional string tabId = 17;
}

message TimestampsMsgInProto {
    optional string startTimestamp = 1;
    optional string sendTimestamp = 2;
    optional string renderingTime = 3;
    optional uint32 ping = 4;
}